Modify layout between pages to be more consistent

--- a/chatroom.html
+++ b/chatroom.html
@@ -17,12 +17,12 @@ messages.
 	</head>
 
 	<body>
-		<div id="wrapper">
+		<div class="wrapper">
 			<div id="chatLog">
 			</div>
 
 			<div class="footer">
-				<div class="messageInputArea">
+				<div id="messageInputArea">
 					<textarea id="messageInputBox" rows="8" placeholder="Type your message here"></textarea>
 				</div>
 
