Adds logo and favicon

--- a/chatroom.html
+++ b/chatroom.html
@@ -11,6 +11,7 @@ messages.
 	<head>
 		<title>FSE Chat Room</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="icon" type="image/png" href="FSEChatroomLogo.png">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 	</head>
