--- a/chatroom.html
+++ b/chatroom.html
@@ -49,13 +49,17 @@ messages.
 
 	$(document).ready(function() {
 	  	var name = getParams("name");
-	  	console.log(name);
+
+	  	// if the name is null or an empty string, redirects back to login page
+	  	if (name === "" || name === null) {
+	  		window.location.href = "/";
+	  	} 
 
 	  	var socket = io.connect("http://localhost:8080");
 	  	socket.emit("join", name);
 	  	console.log("after: " + name);
 
-	  	// If the name is already taken, redirects back to login page
+	  	// if the name is already taken, redirects back to login page
 	  	socket.on("nameTaken", function(name) {
 	  		window.location.href = "/?error=nameTaken&name=" + name;
 	  	});
