--- a/chatroom.html
+++ b/chatroom.html
@@ -51,7 +51,7 @@ messages.
 	  	var name = getParams("name");
 
 	  	// if the name is null or an empty string, redirects back to login page
-	  	if (name === "" || name === null) {
+	  	if (name.trim() === "" || name === null) {
 	  		window.location.href = "/";
 	  	} 
 
@@ -74,7 +74,7 @@ messages.
 	  
 	  	$("#postMessage").click(function() {
 	  		var message = $("#messageInputBox").val();
-	  		if (message !== "") {
+	  		if (message.trim() !== "") {
 		  		socket.emit("newMessage", message);
 		  		$("#messageInputBox").val(""); // clears text area after submitting
 		  	}
