fix bug check name is null before calling trim

--- a/chatroom.html
+++ b/chatroom.html
@@ -51,7 +51,7 @@ messages.
 	  	var name = getParams("name");
 
 	  	// if the name is null or an empty string, redirects back to login page
-	  	if (name.trim() === "" || name === null) {
+	  	if (name === null || name.trim() === "") {
 	  		window.location.href = "/";
 	  	} 
 
